--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
   </header>
 
   <div class="bodytop">
+  <h1 class="text-primary">hlo welcome to the garikalan show</h1>
   </div>
   <h1 class="text-primary">VMART HOUSING</h1>
 
